--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,11 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <title>{% block title %} {% endblock title %}- Mailer</title>
 </head>
-<body>
-    {% block content %}
 
+
+<body>
+<nav>
+    Mailer
+</nav>
+
+<section class="content">
+    <div class="top-bar">
+        <form method="get">
+            <input type="text" name="search" placeholder="Quieres Buscar Algo?">
+        </form>
+        {% block action %}
+            
+        {% endblock action %}
+    </div>
+    <header>
+        {% block header %}
+            
+        {% endblock header %}
+    </header>
+    {% for message in get_flashed_messages() %}
+    <div class="message">{{message}}</div>        
+    {% endfor %}
+
+    {% block content %}
     {% endblock content %}
+</section>
+
+
+<footer>
+    <h3>Jimmy Guerra</h3>
+</footer>
 </body>
 </html>
