--- a/app/templates/mails/index.html
+++ b/app/templates/mails/index.html
@@ -1,6 +1,24 @@
 {% extends 'base.html' %}
-{% block title %} Index {% endblock title %}
+
+{% block header %}
+    <h1>{% block title %} Correos Enviados {% endblock title %}</h1>
+{% endblock header %}
+
+{% block action %}
+    <a class="botton" href="#">Nuevo Correo</a>
+{% endblock action %}
 
 {% block content %}
-<h1>HOLAA</h1>
+<ul>
+    {% for mail in mails %}
+        <li class="mail">
+            <div>
+                <span class="email">{{ mail['emial'] }}</span>
+                <span class="subject">{{ mail['subject'] }}</span>
+                <hr>
+                <p class="mail-content">{{ mail['content'] }}</p>
+            </div>
+        </li>
+    {% endfor %}
+</ul>
 {% endblock content %}
