Creacion de la vista Nuevo Correo

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,13 +15,15 @@
 
     <nav>
         Mailer
+        <h3>Jimmy Guerra</h3>
     </nav>
     <section class="content">
         <div class="top-bar">
         <form method="get">
             <input type="text" name="seach" placeholder="...Quieres Buscar Algo?">
-        </form>
-        <a class="button" href="#">Enviar Correo</a>
+        </form>{% block action %}
+        <a class="button" href="{{ url_for('mail.create')}}">Nuevo Correo</a>
+        {% endblock action %}
         </div>
         <header>
             {% block header %}
@@ -39,7 +41,4 @@
 
 </body>
 
-<footer>
-    <h3>Jimmy Guerra</h3>
-</footer>
 </html>
