--- a/app/static/style.css
+++ b/app/static/style.css
@@ -19,6 +19,20 @@ nav{
 
 }
 
+nav h3{
+    font-size: 20px;
+    position: relative;
+    top:85%;
+    text-shadow: 0px 2px 1px #c7c7bb;
+}
+
+nav h3:hover{
+    display: block;
+    font-size: 30px;
+    transition: 0.5s;
+    color: #1155aa;
+}
+
 form input{
     font-family:'Raleway', sans-serif;
     border: 0;
@@ -36,11 +50,6 @@ form input:hover{
     transition: 0.2s;
 }
 
-footer{
-    position: relative;
-    margin-top: 97%;
-    text-shadow: 0px 2px 1px #c7c7bb;
-}
 
 ul{
     padding-left: 0 ;
@@ -96,8 +105,36 @@ hr{
     align-self: center;
     padding: 10px 15px;
     text-decoration: none;
+    border: none;
 }
 
 .button:hover {
     background-color: #666;
+}
+
+textarea{
+    font-family:'Raleway', sans-serif;
+    border: 0;
+    height: 100px;
+    width: 300px;
+    padding: 10px 15px;
+    border-radius: 30px;
+    outline: none;
+    box-shadow: 0px 2px 5px #c7c7bb;
+    resize: none;
+    display: block;
+}
+textarea:hover{
+    box-shadow: 0px 2px 8px #939377;
+    transition: 0.2s;
+}
+.form-group{
+    margin-bottom: 15px;
+}
+
+form label{
+    display: inline-block;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    margin-top: 20px;
 }
