--- a/app/static/style.css
+++ b/app/static/style.css
@@ -15,8 +15,17 @@ nav{
     padding-right: 25px;
     padding-top: 25px;
     text-align: center;
-    font-size:larger;
+    font-size: 25px;
 
+}
+nav a{
+    text-decoration: none;
+    color: #000;
+}
+
+nav a:hover{
+    font-size: 30px;
+    transition: 0.2seg;
 }
 
 nav h3{
@@ -135,6 +144,16 @@ textarea:hover{
 form label{
     display: inline-block;
     margin-left: 10px;
-    margin-bottom: 10px;
-    margin-top: 20px;
+    margin-bottom: 8px;
+    margin-top: 15px;
+}
+
+.flash{
+    background-color: red;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 8px;
+    border: border 1px rgba(0,0,0,0.1);
+    margin: 10px 0;
+
 }
