--- a/app/templates/mails/create.html
+++ b/app/templates/mails/create.html
@@ -14,11 +14,11 @@
     <form method="post">
         <div class="form-group">
             <label for="email">Correo</label>
-            <input type="text" name="email" id="email">
+            <input type="text" name="email" id="email" required>
             <label for="subject">Asunto</label>
-            <input type="text" name="subject" id="subject">
+            <input type="text" name="subject" id="subject" required>
             <label for="content">Contenido</label>
-            <textarea name="content" id="content"></textarea>
+            <textarea name="content" id="content"></textarea required>
         </div>
         <div class="form-group">
             <button class="button">Guardar</button>
